# EIES

./: .gitignore  .gitmodules  README.md  execute_emotion_rgb.sh  led_panel_client_bt.py  pyproject.toml
eies_bluetooth/: README.MD  bt_client.py  bt_server_REST.py  config.ini  requirements.txt  serverconfig.ini
eies_bluetooth/test/: test_rest.tavern.yaml
eies_bluetooth/tests/: test_rest.tavern.yaml
emotion_light/: __init__.py  ledpanelemotioncontroller.py
emotion_light/tests/: conftest.py  test_dimension_calc.py  test_draw_on_LED.py
emotion_listeners/: emotioncolors.py  emotions.py  emotionsounds.py  ledpanelemotioncontroller.py  soundservercontroller.py  zmq_server_controllers.py
emotion_listeners/tests/: conftest.py  test_dimension_calc.py  test_draw_on_LED.py  test_emotion_audio_exists.py  test_sound_listener_controller.py
sound_engine/: soundenginecontroller.py
